Sources/CPinti/include/core.h

extern "C" void Interruption_Timer(int signal);
#define ENTRER_SectionCritique cpinti::gestionnaire_tache::begin_SectionCritique
#define SORTIR_SectionCritique cpinti::gestionnaire_tache::end_SectionCritique
		/**** Methodes ****/
		bool initialiser_Multitache();
		void IamInLive();
		uinteger get_cycle_cpu();
		uinteger get_cycle_MAX_cpu();
		/** Threads **/
		uinteger ajouter_Thread(void *(*Fonction)(void *arg), const char *NomThread, uinteger pid, int Priorite, uintptr_t Arguments);
		void Interruption_Timer(int sig);
		uinteger get_ThreadEnCours();
		void begin_SectionCritique();
		void end_SectionCritique();
		bool state_SectionCritique();